<?xml version="1.0"?>
<package>
  <name>strands_perception_people</name>
  <version>1.10.0</version>
  <description>The strands_perception_people metapackage</description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/strands-project/strands_perception_people</url>

  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>bayes_people_tracker</run_depend>
  <run_depend>bayes_people_tracker_logging</run_depend>
  <run_depend>ground_plane_estimation</run_depend>
  <run_depend>mdl_people_tracker</run_depend>
  <run_depend>odometry_to_motion_matrix</run_depend>
  <run_depend>perception_people_launch</run_depend>
  <run_depend>upper_body_detector</run_depend>
  <run_depend>vision_people_logging</run_depend>
  <run_depend>visual_odometry</run_depend>
  <run_depend>human_trajectory</run_depend>
  <run_depend>people_tracker_emulator</run_depend>
  <run_depend>people_tracker_filter</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
