<?xml version="1.0"?>
<package>
  <name>strands_perception_people_msgs</name>
  <version>0.0.0</version>
  <description>The strands_perception_people_msgs package</description>

  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>


  <export/>
</package>
