<?xml version="1.0"?>
<package>
  <name>upper_body_detector</name>
  <version>1.5.0</version>
  <description>The upper_body_detector package</description>

  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/strands-project/strands_perception_people</url>

  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author>
  <author email="mitzel@umic.rwth-aachen.de">Dennis Mitzel</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ground_plane_estimation</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>ground_plane_estimation</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export/>
</package>
